refactor: extract AttachmentStorageService for shared image block creation
Move duplicated image-to-base64 logic from ClaudeSessionQueryService and
HistoryMessageInjector into a unified AttachmentStorageService singleton.
Add AttachmentResourceService and AttachmentResourceRequestHandler for
WebView resource handling. Update HistoryDeleteService accordingly.